# saya

./: .dockerignore  .env.example  .env.persistent.example  .env.sovereign.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile-bins  Dockerfile.local  Dockerfile.tests  Makefile  README.md  SAYA_INTEGRATION_PLAN.md  WIP_DEV.md  arch2.excalidraw  compose.e2e.yml  compose.l2.yml  compose.l3.yml  compose.yml  entrypoint.sh  layout_bridge.json  requirements.txt  saya.db
.agents/skills/create-a-plan/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  build_docker.yml  build_programs.yml  docs-sync.yml  e2e-tests.yml  lint.yml  release-dispatch.yml  release.yml  test.yml
contracts/: core_contract.json  fact_registry_mock.json  piltover_mock.json  tee_registry_mock.json
contracts/messaging/: appc_msg_sn.contract_class.json  sn_msg.contract_class.json
docker/: Dockerfile.sozo
docs/: tee-attestation-reference.md  tee-pipeline-gaps.md
saya/core/: Cargo.toml
saya/core/src/: errors.rs  lib.rs  macros.rs  utils.rs
saya/core/src/block_ingestor/: mod.rs  polling.rs
saya/core/src/block_ingestor/pie_generator/: local.rs  mod.rs  remote.rs
saya/core/src/block_ingestor/sharding/: polling.rs
saya/core/src/data_availability/: celestia.rs  mod.rs  noop.rs
saya/core/src/data_availability/celestia/: mod.rs
saya/core/src/db/: mod.rs  sql_lite.rs  tests.rs  utils.rs
saya/core/src/orchestrator/: mod.rs  persistent.rs  persistent_tee.rs  sharding.rs  sovereign.rs  tee.rs
saya/core/src/piltover/: mod.rs
saya/core/src/prover/: atlantic.rs  block_orderer.rs  error.rs  mod.rs  recursive.rs  snos_pie_generator.rs
saya/core/src/prover/atlantic/: client.rs  layout_bridge.rs  mod.rs  shared.rs  snos.rs
saya/core/src/prover/mock/: layout_bridge.rs  mod.rs  sample_proof.json  stark_proof_mock.rs
saya/core/src/prover/tee/: mod.rs
saya/core/src/prover/trace/: atlantic.rs  http_prover.rs  mod.rs
saya/core/src/service/: mod.rs
saya/core/src/settlement/: mod.rs  piltover.rs  piltover_tee.rs
saya/core/src/settlement/fact_registration/: integrity.rs  mod.rs  noop.rs  tee.rs
saya/core/src/shard/: aggregator.rs  mod.rs  shard_output.rs
saya/core/src/starknet/: account.rs
saya/core/src/storage/: in_memory.rs  mod.rs
saya/core/src/storage/sql_lite/: mod.rs  storage.rs  utils.rs
saya/core/src/tee/: attestor.rs  mod.rs  storage.rs  verifier.rs
saya/core/src/utlis/: graceful_shutdown.rs  mod.rs  pie.rs
saya/tracing/: Cargo.toml
saya/tracing/src/: fmt.rs  lib.rs
scripts/: celestia.sh  clippy.sh  generate_layout_bridge.sh  generate_snos.sh  lint.sh
scripts/entrypoints/: celestia_init.sh  hash_program.py  layout_bridge.sh  snos.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: env.rs  lib.rs
tests/e2e/tests/: messaging.rs  settlement.rs
