[workspace]
resolver = "2"
members = [
    "saya/core",
    "bin/saya",
    "tests/e2e",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dojoengine/saya"

[workspace.dependencies]
saya-core = { path = "saya/core" }

anyhow = { version = "1.0.95", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.22", features = ["kv"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.134", default-features = false }

starknet = "0.17.0"
starknet-types-core = { version = "0.2.1", default-features = false, features = ["hash"] }

thiserror = "2.0.12"
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = { version = "0.7.13", default-features = false }
url = { version = "2.5.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["chrono", "macros", "regexp", "runtime-async-std", "runtime-tokio", "sqlite", "uuid"] }
alloy-consensus = "1.0.41"
piltover = { package = "piltover", git = "https://github.com/cartridge-gg/piltover.git", rev = "dc86b13de0713c172153c4833fd7b3d14a855351" }


[patch.crates-io]
alloy = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }