[package]
name = "saya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Saya core implementation."

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
sqlx.workspace = true
piltover.workspace = true
cainome-cairo-serde = "0.4.1"
katana_tee_client = { git = "ssh://git@github.com/cartridge-gg/katana-tee.git", rev = "56aa752d2e73e505c356c80b7a00eddd27d4d263" }
sha3 = "0.10"
