[package]
name = "saya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Saya core implementation."

[features]
snos = ["dep:swiftness_stark"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
celestia-rpc.workspace = true
celestia-types.workspace = true
ciborium.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
swiftness_stark = { git = "https://github.com/chudkowsky/swiftness", rev = "e07d185", default-features = false, features = ["recursive_with_poseidon", "keccak_160_lsb", "stone6"], optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true
sqlx.workspace = true
starknet_api.workspace = true
piltover.workspace = true
cainome.workspace = true
