[package]
name = "saya-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing/logging initialization for Saya binaries."

[dependencies]
chrono = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
