[package]
name = "saya-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[test]]
name = "settlement"
path = "tests/settlement.rs"

[dependencies]
anyhow.workspace = true
piltover.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
url.workspace = true
